fix: Java 11 compatibility and build hardening
- Convert Java 15+ text blocks to String.format() for Java 11 compatibility
  (ValidatorAuthHandler, ValidatorRegistrationHandler)
- Add Apache license headers to GC cost estimation classes
- Add RAT exclusion for *.md files in oak-parent (inherited by all modules)
- Add Testcontainers dependency for integration tests
- Fix ConsensusApiHandlerTest to use real ServerContext instead of mocking fields
- Fix EvmBridgeTest to register wallet before verifyPayment() in MOCK mode

Build now passes without -Drat.skip or -Dbaseline.skip flags.
All 186 tests pass.